Added a comment to the index.html
Some description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--This fucking is a crazy Shit blowing my mind, I wrote this file long ago fa-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conservation Site</title>
